@@ -23,7 +23,6 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS([limits.h stdint.h stdlib.h string.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-AC_C_BIGENDIAN
 AC_C_CONST
 AC_TYPE_SIZE_T
 AC_CHECK_SIZEOF(void *)
